--- a/gomod2nix.toml
+++ b/gomod2nix.toml
@@ -1,30 +1,38 @@
 schema = 3
 
 [mod]
-  [mod."github.com/BurntSushi/toml"]
-    version = "v1.6.0"
-    hash = "sha256-ptdUJvuc21ixeLt+M5way/na3aCnCO4MYHWulWp8NEY="
-  [mod."github.com/inconshreveable/mousetrap"]
-    version = "v1.1.0"
-    hash = "sha256-XWlYH0c8IcxAwQTnIi6WYqq44nOKUylSWxWO/vi+8pE="
-  [mod."github.com/nix-community/go-nix"]
-    version = "v0.0.0-20220612195009-5f5614f7ca47"
-    hash = "sha256-eBPzib8STUZnDpLFpWZz+F00thbp1P/98oiEE/XWE+M="
-  [mod."github.com/sirupsen/logrus"]
-    version = "v1.9.4"
-    hash = "sha256-ltRvmtM3XTCAFwY0IesfRqYIivyXPPuvkFjL4ARh1wg="
-  [mod."github.com/spf13/cobra"]
-    version = "v1.10.1"
-    hash = "sha256-OP6wdqk4dvBD8U5aicTkySHZ2s0LWnBo2TST2SmgcpM="
-  [mod."github.com/spf13/pflag"]
-    version = "v1.0.9"
-    hash = "sha256-YAjyYpq5BXCosVJtvYLWFG1t4gma2ylzc7ILLoj/hD8="
-  [mod."golang.org/x/mod"]
-    version = "v0.32.0"
-    hash = "sha256-4gbgIqTOo0vcYV3l4MIwmT/h8H9PXmcfrJ3z4B26Zl0="
-  [mod."golang.org/x/sys"]
-    version = "v0.14.0"
-    hash = "sha256-ReIRQmONicRW9idzGVPCBx5TTcKacmQTF1vPC3L4SxY="
-  [mod."golang.org/x/tools/go/vcs"]
-    version = "v0.1.0-deprecated"
-    hash = "sha256-57YB10tiRsVSRvJqKYST+iON6yZYGL7eRSzrFcImC8Y="
+[mod.'github.com/inconshreveable/mousetrap']
+version = 'v1.1.0'
+hash = 'sha256-XWlYH0c8IcxAwQTnIi6WYqq44nOKUylSWxWO/vi+8pE='
+
+[mod.'github.com/nix-community/go-nix']
+version = 'v0.0.0-20220612195009-5f5614f7ca47'
+hash = 'sha256-eBPzib8STUZnDpLFpWZz+F00thbp1P/98oiEE/XWE+M='
+
+[mod.'github.com/pelletier/go-toml/v2']
+version = 'v2.2.4'
+hash = 'sha256-8qQIPldbsS5RO8v/FW/se3ZsAyvLzexiivzJCbGRg2Q='
+
+[mod.'github.com/sirupsen/logrus']
+version = 'v1.9.4'
+hash = 'sha256-ltRvmtM3XTCAFwY0IesfRqYIivyXPPuvkFjL4ARh1wg='
+
+[mod.'github.com/spf13/cobra']
+version = 'v1.10.1'
+hash = 'sha256-OP6wdqk4dvBD8U5aicTkySHZ2s0LWnBo2TST2SmgcpM='
+
+[mod.'github.com/spf13/pflag']
+version = 'v1.0.9'
+hash = 'sha256-YAjyYpq5BXCosVJtvYLWFG1t4gma2ylzc7ILLoj/hD8='
+
+[mod.'golang.org/x/mod']
+version = 'v0.32.0'
+hash = 'sha256-4gbgIqTOo0vcYV3l4MIwmT/h8H9PXmcfrJ3z4B26Zl0='
+
+[mod.'golang.org/x/sys']
+version = 'v0.14.0'
+hash = 'sha256-ReIRQmONicRW9idzGVPCBx5TTcKacmQTF1vPC3L4SxY='
+
+[mod.'golang.org/x/tools/go/vcs']
+version = 'v0.1.0-deprecated'
+hash = 'sha256-57YB10tiRsVSRvJqKYST+iON6yZYGL7eRSzrFcImC8Y='
